--- a/FE/src/app/features/apartment/components/apartment-view/apartment-view.component.html
+++ b/FE/src/app/features/apartment/components/apartment-view/apartment-view.component.html
@@ -1,93 +1,95 @@
 <div class="container">
   <!-- Apartment Photos -->
-  <app-apartment-detail-photos></app-apartment-detail-photos>
+  <div class="real-estate-2">
+    <app-apartment-detail-photos
+      [photos]="room.photos || []"
+    ></app-apartment-detail-photos>
+  </div>
 
-  <div>
+  <div class="mt-4">
     <h5 class="fs-5 fw-bold mb-4">Chi tiết</h5>
     <table class="table table-striped">
       <tbody>
         <tr>
           <th scope="row">Mã số</th>
           <td>
-            {{ room().roomCode }}
+            {{ room.roomCode }}
           </td>
         </tr>
         <tr>
           <th scope="row">Tên phòng</th>
           <td>
-            {{ room().name }}
+            {{ room.name }}
           </td>
         </tr>
         <tr>
           <th scope="row">Thể loại</th>
           <td>
-            {{ category[room().category] }}
+            {{ category[room.category || ""] }}
           </td>
         </tr>
         <tr>
           <th scope="row">Tỉnh/Thành</th>
           <td>
-            {{ room().province }}
+            {{ room.province }}
           </td>
         </tr>
         <tr>
           <th scope="row">Quận/Huyện</th>
           <td>
-            {{ room().district }}
+            {{ room.district }}
           </td>
         </tr>
         <tr>
           <th scope="row">Phường/Xã</th>
           <td>
-            {{ room().ward }}
+            {{ room.ward }}
           </td>
         </tr>
         <tr>
           <th scope="row">Địa chỉ</th>
           <td>
-            {{ room().address }}
+            {{ room.address }}
           </td>
         </tr>
         <tr>
           <th scope="row">Diện tích</th>
           <td>
-            {{ room().area }}
+            {{ room.area }}<span>m<sup>2</sup></span>
           </td>
         </tr>
         <tr>
           <th scope="row">Giá</th>
-          <td>
-            {{ room().price }}
-          </td>
+          <td>{{ room.price }} đồng</td>
         </tr>
         <tr>
           <th scope="row">Nội thất</th>
           <td>
-            {{ interior[room().interior] }}
+            {{ interior[room.interior || ""] }}
           </td>
         </tr>
         <tr>
           <th scope="row">Số phòng ngủ</th>
           <td>
-            {{ room().bedroom }}
+            {{ room.bedroom }}
           </td>
         </tr>
         <tr>
           <th scope="row">Số phòng tắm</th>
           <td>
-            {{ room().bathroom }}
+            {{ room.bathroom }}
           </td>
         </tr>
         <tr>
           <th scope="row">Số nhà vệ sinh</th>
           <td>
-            {{ room().toilet }}
+            {{ room.toilet }}
           </td>
         </tr>
         <tr>
           <th scope="row">Tình trạng</th>
           <td>
-            {{ condition[room().condition] }}
+            {{ condition[room.condition || ""] }}
           </td>
         </tr>
       </tbody>
