--- a/FE/src/app/features/apartment/pages/apartment-detail/apartment-detail.component.html
+++ b/FE/src/app/features/apartment/pages/apartment-detail/apartment-detail.component.html
@@ -33,7 +33,9 @@
     <section id="real-estate-2" class="real-estate-2 section">
       <div class="container" data-aos="fade-up">
         <!-- Apartment Photos -->
-        <app-apartment-detail-photos></app-apartment-detail-photos>
+        <app-apartment-detail-photos
+          [photos]="[]"
+        ></app-apartment-detail-photos>
 
         <div class="row justify-content-between gy-4 mt-4">
           <div class="col-lg-7" data-aos="fade-up">
