--- a/FE/src/app/shared/components/modal/modal.component.html
+++ b/FE/src/app/shared/components/modal/modal.component.html
@@ -13,6 +13,7 @@
   </ng-template>
   <ng-template #text>{{ modal?.content }}</ng-template>
 </div>
+@if(modal?.button){
 <div class="modal-footer">
   <button type="button" class="btn btn-light" (click)="decline()">
     {{ modal?.button?.decline || "Hủy bỏ" }}
@@ -21,3 +22,4 @@
     {{ modal?.button?.accept || "Đồng ý" }}
   </button>
 </div>
+}
