--- a/FE/src/styles.scss
+++ b/FE/src/styles.scss
@@ -464,7 +464,7 @@ h6 {
   inset: 0;
   z-index: 999999;
   overflow: hidden;
-  background: var(--background-color);
+  background: rgb(0, 0, 0, 0.5);
   transition: opacity 0.6s ease-out;
   opacity: 1;
 }
@@ -1860,4 +1860,9 @@ body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.cdk-global-overlay-wrapper,
+.cdk-overlay-container {
+  z-index: 99999 !important;
 }
