--- a/FE/src/app/features/profiles/components/profile-edit-profile/profile-edit-profile.component.html
+++ b/FE/src/app/features/profiles/components/profile-edit-profile/profile-edit-profile.component.html
@@ -68,7 +68,7 @@
   
   <!-- Description input -->
   <mat-form-field class="w-100" appearance="outline">
-    <mat-label>Description</mat-label>
+    <mat-label>Mô tả</mat-label>
     <textarea
       matInput
       formControlName="description"
