--- a/FE/src/app/features/management/lessor/pages/lessor-apartment/lessor-apartment.component.html
+++ b/FE/src/app/features/management/lessor/pages/lessor-apartment/lessor-apartment.component.html
@@ -13,46 +13,47 @@
       ></app-search>
     </div>
   </div>
+  
   <div class="position-relative">
     <div [hidden]="dataSource.data.length == 0">
       <table mat-table [dataSource]="dataSource" matSort>
         <!-- Name Column -->
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Tên phòng</th>
-          <td mat-cell *matCellDef="let element">{{ element?.name }}</td>
+          <td mat-cell *matCellDef="let element">{{ element.name }}</td>
         </ng-container>
 
         <!-- Category Column -->
         <ng-container matColumnDef="category">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Thể loại</th>
           <td mat-cell *matCellDef="let element">
-            {{ category[element?.category] }}
+            {{ category[element.category] }}
           </td>
         </ng-container>
 
         <!-- Address Column-->
         <ng-container matColumnDef="address">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Địa chỉ</th>
-          <td mat-cell *matCellDef="let element">{{ element?.address }}</td>
+          <td mat-cell *matCellDef="let element">{{ element.address }}</td>
         </ng-container>
 
         <!-- Area Column-->
         <ng-container matColumnDef="area">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Diện tích</th>
-          <td mat-cell *matCellDef="let element">{{ element?.area }}</td>
+          <td mat-cell *matCellDef="let element">{{ element.area }}</td>
         </ng-container>
 
         <!-- Price Column-->
         <ng-container matColumnDef="price">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Giá</th>
-          <td mat-cell *matCellDef="let element">{{ element?.price }}</td>
+          <td mat-cell *matCellDef="let element">{{ element.price }}</td>
         </ng-container>
 
         <!-- Condition Column-->
         <ng-container matColumnDef="condition">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Tình trạng</th>
           <td mat-cell *matCellDef="let element">
-            {{ condition[element?.condition] }}
+            {{ condition[element.condition] }}
           </td>
         </ng-container>
 
@@ -76,7 +77,7 @@
                 <i class="fa-solid fa-wrench"></i>
                 <span>Sửa</span>
               </button>
-              <button (click)="onDelete(element?.id)" mat-menu-item>
+              <button (click)="onDelete(element.id)" mat-menu-item>
                 <i class="fa-solid fa-trash"></i>
                 <span>Xóa</span>
               </button>
@@ -106,13 +107,3 @@
     <app-mini-load></app-mini-load>
   </div>
 </div>
-
-<!-- View Modal -->
-<ng-template #viewModal>
-  <app-apartment-view [room]="room"></app-apartment-view>
-</ng-template>
-
-<!-- Update Modal -->
-<ng-template #updateModal>
-  <app-apartment-update [room]="room"></app-apartment-update>
-</ng-template>
