--- a/FE/src/app/features/management/lessor/pages/lessor-post/lessor-post.component.html
+++ b/FE/src/app/features/management/lessor/pages/lessor-post/lessor-post.component.html
@@ -1,88 +1,106 @@
 <div class="checked-out-room">
-    <h5 class="fs-5 fw-bold mt-3 mb-4">Quản lý phòng trọ</h5>
-    <div class="row align-items-center justify-content-between g-2 mt-3 mb-5">
-      <div class="col-lg-2">
-        <button routerLink="/lessor/apartment/insert" class="btn btn-dark w-100">Thêm phòng mới</button>
-      </div>
-      <div class="col-lg-8">
-        <app-search></app-search>
-      </div>
+  <h5 class="fs-5 fw-bold mt-3 mb-4">Quản lý phòng trọ</h5>
+  <div class="row align-items-center justify-content-between g-2 mt-3 mb-5">
+    <div class="col-lg-3">
+      <button routerLink="/lessor/post/insert" class="btn btn-dark w-100">
+        Đăng tin
+      </button>
     </div>
-    <table mat-table [dataSource]="dataSource" matSort>
-      <!-- Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Tên phòng</th>
-        <td mat-cell *matCellDef="let element">{{ element["name"] }}</td>
-      </ng-container>
-  
-      <!-- Lessor Column -->
-      <ng-container matColumnDef="lessor">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Người cho thuê</th>
-        <td mat-cell *matCellDef="let element">{{ element.lessor }}</td>
-      </ng-container>
-  
-      <!-- Phone Number Column -->
-      <ng-container matColumnDef="phoneNumber">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Số điện thoại</th>
-        <td mat-cell *matCellDef="let element">{{ element.phoneNumber }}</td>
-      </ng-container>
-  
-      <!-- Room Price Column-->
-      <ng-container matColumnDef="price">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Giá</th>
-        <td mat-cell *matCellDef="let element">{{ element.price }}</td>
-      </ng-container>
-  
-      <!-- Duration Column-->
-      <ng-container matColumnDef="duration">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Thời hạn</th>
-        <td mat-cell *matCellDef="let element">{{ element.duration }}</td>
-      </ng-container>
-  
-      <!-- Status Column-->
-      <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Trạng thái</th>
-        <td mat-cell *matCellDef="let element">{{ element.status }}</td>
-      </ng-container>
-  
-      <!-- Mode Column-->
-      <ng-container matColumnDef="disabled">
-        <th mat-header-cell *matHeaderCellDef></th>
-        <td mat-cell *matCellDef="let element">
-          <button
-            mat-icon-button
-            [disabled]="element.disabled"
-            [matMenuTriggerFor]="menu"
-            class="d-flex justify-content-center align-items-center"
-          >
-            <i class="fa-solid fa-ellipsis-vertical"></i>
-          </button>
-          <mat-menu #menu class="px-1">
-            <button (click)="onForm()" mat-menu-item>
-              <i class="fa-solid fa-circle-plus"></i>
-              <span>Gửi yêu cầu</span>
-            </button>
-            <button mat-menu-item>
-              <i class="fa-solid fa-wrench"></i>
-              <span>Sửa</span>
-            </button>
-            <button mat-menu-item>
-              <i class="fa-solid fa-trash"></i>
-              <span>Xóa</span>
-            </button>
-          </mat-menu>
-        </td>
-      </ng-container>
-  
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
-    <div class="pt-4">
-      <!-- <app-pagination></app-pagination> -->
+    <div class="col-lg-8">
+      <app-search
+        [placeholder]="'Tìm kiếm...'"
+        (search)="onSearch($event)"
+      ></app-search>
     </div>
   </div>
-  
-  <ng-template #maintenance>
-    <app-maintenance-form></app-maintenance-form>
-  </ng-template>
-  
+
+  <div class="position-relative">
+    <div [hidden]="dataSource.data.length == 0">
+      <table mat-table [dataSource]="dataSource" matSort>
+        <!-- Title Column -->
+        <ng-container matColumnDef="title">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Tiêu đề</th>
+          <td mat-cell *matCellDef="let element">{{ element.title }}</td>
+        </ng-container>
+
+        <!-- Name Room Column -->
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Tên phòng</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.room?.name || "" }}
+          </td>
+        </ng-container>
+
+        <!-- AvailableFrom Column -->
+        <ng-container matColumnDef="availableFrom">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Ngày có sẵn</th>
+          <td mat-cell *matCellDef="let element">
+            {{ element.availableFrom | date : "MM/dd/yyyy" }}
+          </td>
+        </ng-container>
+
+        <!-- Status Column-->
+        <ng-container matColumnDef="status">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Tình trạng</th>
+          <td mat-cell *matCellDef="let element">
+            {{ status[element.status] }}
+          </td>
+        </ng-container>
+
+        <!-- Is Accept Column -->
+        <ng-container matColumnDef="isAccept">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Trạng thái</th>
+          <td mat-cell *matCellDef="let element">
+            {{ isAccept[element.isAccept] }}
+          </td>
+        </ng-container>
+
+        <!-- Optional Column-->
+        <ng-container matColumnDef="optional">
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let element">
+            <button
+              mat-icon-button
+              [matMenuTriggerFor]="menu"
+              class="d-flex justify-content-center align-items-center"
+            >
+              <i class="fa-solid fa-ellipsis-vertical"></i>
+            </button>
+            <mat-menu #menu class="px-1">
+              <button [routerLink]="['apartment/detail', element.id]" mat-menu-item>
+                <i class="fa-solid fa-eye"></i>
+                <span>Xem</span>
+              </button>
+              <button (click)="onUpdate(element)" mat-menu-item>
+                <i class="fa-solid fa-wrench"></i>
+                <span>Sửa</span>
+              </button>
+              <button (click)="onDelete(element.id)" mat-menu-item>
+                <i class="fa-solid fa-trash"></i>
+                <span>Gỡ bài</span>
+              </button>
+            </mat-menu>
+          </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+
+      <!-- Pagination -->
+      <div class="pt-4">
+        <app-pagination
+          [paginationParams]="paginationParams()"
+          (pageChange)="onPageChange($event)"
+        ></app-pagination>
+      </div>
+    </div>
+
+    <!-- Empty table -->
+    <ng-container *ngIf="dataSource.data.length == 0">
+      <p class="fs-4 py-5 text-center">Bạn chưa có bài đăng nào!</p>
+    </ng-container>
+
+    <!-- Mini Loading -->
+    <app-mini-load></app-mini-load>
+  </div>
+</div>
