--- a/FE/src/app/features/profiles/pages/rented-history/rented-history.component.html
+++ b/FE/src/app/features/profiles/pages/rented-history/rented-history.component.html
@@ -55,7 +55,7 @@
           <i class="fa-solid fa-ellipsis-vertical"></i>
         </button>
         <mat-menu #menu class="px-1">
-          <button (click)="onForm()" mat-menu-item>
+          <button mat-menu-item>
             <i class="fa-solid fa-circle-plus"></i>
             <span>Gửi yêu cầu</span>
           </button>
